# nws-aurora

./: .pre-commit-config.yaml  Makefile  Pipfile  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: continuous-deployment.yaml  docs.yaml  scrape.yaml
data/: forecast.json  images-north.json  images-south.json  latest-image-north.txt  timestamp.txt
docs/: conf.py  index.md
nws_aurora/: __init__.py  cli.py
